--- a/contacts.html
+++ b/contacts.html
@@ -90,7 +90,7 @@
                     <a class="contacts link" href="https://goo.gl/maps/QkFTVSAog356a6eM8" target="_blank" rel="noreferrer noopener">
                         <svg class="contacts-icon"><use href="./img/sprite.svg#sphere"></use>
                         </svg>
-                        Odesa, Ukrain
+                        Odesa, Ukraine
                     </a>
                 </li>
                 <li class="product__item">
