--- a/contacts.html
+++ b/contacts.html
@@ -119,7 +119,9 @@
                 </li>
                 <li class="product__item">
                     <!-- <h3>Telegram</h3> -->
-                    <a class="contacts link" href="https://drive.google.com/file/d/1wbWW_UNfUq3tH3DZ8UV9Ka4vsEx6UZY4/view?usp=sharing" target="_blank" rel="noreferrer noopener">
+                    <a class="contacts link" 
+                    href="#" 
+                    >
                           <svg class="contacts-icon"><use href="./img/sprite.svg#telegr"></use>
                         </svg>
                         @LiubovAnatoliivna
@@ -148,7 +150,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://drive.google.com/file/d/1wbWW_UNfUq3tH3DZ8UV9Ka4vsEx6UZY4/view?usp=sharing" target="_blank" rel="noreferrer noopener">
+                    <a href="https://telegram.org/" target="_blank" rel="noreferrer noopener">
                         <svg class="social-icon">
                             <use href="./img/sprite.svg#telegr"></use>
                         </svg>
@@ -199,3 +201,5 @@
     <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
+
+<!-- href="https://drive.google.com/file/d/1wbWW_UNfUq3tH3DZ8UV9Ka4vsEx6UZY4/view?usp=sharing" -->
